# EvEOverlay

./: .gitignore  .gitmodules  CMakeLists.txt  csvconverter.py  todo.md
assets/: invTypes.db  invTypes.json.zz
src/: CMakeLists.txt  authentication.cpp  authentication.h  base64.cpp  base64.h  db.cpp  db.h  displaywindow.cpp  displaywindow.h  esisession.cpp  esisession.h  eve-overlay.cpp  imguiwindow.cpp  imguiwindow.h  lib.cpp  logging.h  math.h  requests.cpp  requests.h  systeminfowindow.cpp  systeminfowindow.h  util.cpp  util.h
src/gfx/: displaywindow.cpp  displaywindow.h  imguiwindow.cpp  imguiwindow.h
